# trin

crates/e2store/: Cargo.toml
crates/storage/src/: lib.rs  shared_ephemeral.rs
crates/storage/src/versioned/: mod.rs
crates/subnetworks/beacon/src/: network.rs  storage.rs
crates/subnetworks/history/src/: network.rs  storage.rs
trin-core/src/jsonrpc/: types.rs
trin-core/src/portalnet/: overlay.rs  overlay_service.rs
trin-core/src/portalnet/types/: content_key.rs
trin-core/src/utp/: stream.rs  trin_helpers.rs
