[package]
name = "e2store"
keywords = ["ethereum", "portal-network", "e2store", "era", "era1"]
description = "E2store, era, and era1 implementations for Ethereum"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.3.0"

[dependencies]
alloy = { workspace = true, features = ["rlp", "consensus"] }
alloy-rlp.workspace = true
anyhow.workspace = true
clap = { workspace = true, optional = true }
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
ethportal-api.workspace = true
hex = { workspace = true, optional = true }
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
serde_yaml = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
scraper.workspace = true
snap.workspace = true
url.workspace = true
rayon = "1.10.0"

[dev-dependencies]
rstest.workspace = true
tokio.workspace = true
trin-utils.workspace = true

[features]
e2ss-stats-binary = ["clap", "tracing", "tracing-subscriber"]
era-reader-binary = ["clap", "serde_json", "serde_yaml", "hex", "serde"]

[[bin]]
name = "e2ss-stats"
required-features = ["e2ss-stats-binary"]

[[bin]]
name = "era-reader"
required-features = ["era-reader-binary"]
